--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
 <body>
   <div class="container">
     <div class="photos">
-      <div id="image1">
-        
+      <div id="image1" class="photo-frame">
+        <span id="desc1" class="photo-desc">사진1</span>
+      </div>
+      <div id="image2" class="photo-frame">
+        <span id="desc2" class="photo-desc">사진2</span>
+      </div>
+      <div id="image3" class="photo-frame">
+        <span id="desc3" class="photo-desc">사진3</span>
+      </div>
+      <div id="image4" class="photo-frame">
+        <span id="desc4" class="photo-desc">사진4</span>
       </div>
     </div>
     <div class="footer">
-
+      <p class="f-title">Happy</p>
+      <p class="f-date">2023. 03. 21</p>
     </div>
   </div>
 </body>
