--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="footer">
-      <p class="f-title">Happy</p>
+      <p class="f-title">Happy Day</p>
       <p class="f-date">2023. 03. 21</p>
     </div>
   </div>
