--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <div class="container">
     <div class="photos">
       <div id="image1" class="photo-frame">
-        <span id="desc1" class="photo-desc">사진1</span>
+        <span id="desc1" class="photo-desc">수학여행 :)</span>
       </div>
       <div id="image2" class="photo-frame">
-        <span id="desc2" class="photo-desc">사진2</span>
+        <span id="desc2" class="photo-desc">출발 🚌</span>
       </div>
       <div id="image3" class="photo-frame">
-        <span id="desc3" class="photo-desc">사진3</span>
+        <span id="desc3" class="photo-desc">바닷가에서 🐬</span>
       </div>
       <div id="image4" class="photo-frame">
-        <span id="desc4" class="photo-desc">사진4</span>
+        <span id="desc4" class="photo-desc">단체사진 📸</span>
       </div>
     </div>
     <div class="footer">
